Tue Feb 20 17:15:37 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * ace/config-qnx-rtp.h:
        * include/makeinclude/platform_qnx_rtp_gcc.GNU:

          Moved the version detection from the platform_macros file to the
          config file.  This allows us to use the QNX system-defined macro
          _NTO_VERSION, which works in cross-compile environments.  The old
          method of reading the version number from the "uname -a" output is
          not compatible with cross-compilation.

Tue Feb 20 16:38:24 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/MakeProjectCreator/templates/gnu.mpd
        * bin/MakeProjectCreator/config/global.features
        
          Added logic in gnu template for new XSC custom type in CIAO,
          and disabled xsc by default in global.features.

Tue Feb 20 16:12:57 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tests/Bug_2820_Regression_Test.cpp: ACEify use of auto_ptr.

Tue Feb 20 16:06:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/os_stdlib.h:
          Simplified the ACE_RANDR_TYPE define setting

        * ace/OS_NS_stdio.inl:
        * ace/SOCK_Dgram.cpp:
        * ace/WFMO_Reactor.cpp:
          Simplified Borland C++ checks, no need to check for the version
          number

Tue Feb 20 15:54:20 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * ace/OS_NS_Thread.cpp:

          Reverted my change to check PTHREAD_STACK_MIN.  I just realized
          that it may not be defined as an integral value (i.e., Solaris).

Tue Feb 20 15:46:06 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * ace/OS_NS_Thread.cpp:

          Added ACE_UNUSED_ARG(id) for RTEMS and modified code to check
          that size (which is of type size_t) is less than PTHREAD_STACK_MIN
          only if PTHREAD_STACK_MIN is greater than zero.

        * ace/OS_NS_stdlib.cpp:

          Fixed a compile error on VxWorks where an attempt to cast