@@ -1,3 +1,14 @@
+Tue Feb 20 18:08:47 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>
+
+        * tests/Object_Manager_Flipping_Test.cpp:
+        * tests/tests.mpc:
+
+          Adding new test verifying that after ACE::fini has been called,
+          the correct pointer value has been stored in TSS for the Service
+          Config.  A subsequent call to ACE::init may SEGV
+          otherwise. Thanks to Bjoern Rasmussen <bjoern.d.rasmussen at
+          gmail dot com> for reporting it.
+
 Tue Feb 20 17:15:37 UTC 2007  Adam Mitz  <mitza@ociweb.com>
 
         * ace/config-qnx-rtp.h:
